improve migration